--- a/config/lanenet.yml
+++ b/config/lanenet.yml
@@ -25,7 +25,7 @@ spec:
       image: docker.ascentrobotics.jp/lanenet
       command: ["/bin/bash"]
       args: ["-c", ""]
-      extendedResourceRequests: ["nvidia-gpu"]
+      computeResourceRequests: ["nvidia-gpu"]
  
       resources:
         requests:
@@ -41,7 +41,7 @@ spec:
       - mountPath: /datashare
         name: datashare
          
-  extendedResources:
+  computeResources:
     - name: "nvidia-gpu"
       resources:
         limits:
